--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <h1>Manasai</h1>
   <p><em>Lagu Daerah Kalimantan Tengah</em></p>
   <audio controls autoplay>
-    <source src="Manasai lagu daerah kalimantan tengah.mp3" type="audio/mpeg">
+    <source src="Manari Manasai.mp3" type="audio/mpeg">
     Browser Anda tidak mendukung elemen audio.
   </audio>
   <div class="lyrics">
